--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.87"
 clap = { version = "4.1.13", features = [ "derive" ]}
 
-# eframe = "0.22.0"
-# rfd = "0.11.4"
+eframe = "0.22.0"
+rfd = "0.11.4"
